apps/media-downloaders/sonarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media-downloaders
  labels:
    app: sonarr
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - name: "http"
      protocol: TCP
      targetPort: 7878
      port: 7878
