apps/media-downloaders/sonarr/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media-downloaders
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Sonarr"
    gethomepage.dev/description: "TV Downloader"
    gethomepage.dev/group: "Media Downloaders"
    gethomepage.dev/icon: "sonarr"
spec:
  rules:
    - host: sonarr.home.mees-olivier.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  name: http
  tls:
    - secretName: sonarr-tls
      hosts:
        - sonarr.home.mees-olivier.com
